src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>BRI_WIC_Status_Change__c</fullName>
        <label>WIC Status Change</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_WIC_Vouchers__c</fullName>
        <label>WIC Vouchers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Workers_Comp_Amount__c</fullName>
        <label>Workers Comp Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Xfer1__c</fullName>
        <label>Xfer1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Xfer2__c</fullName>
        <label>Xfer2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>Households (County)</relationshipLabel>
        <relationshipName>Households</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSW</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Family_Provider__c</fullName>
        <label>Family Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Has provider; regular contact</fullName>
                </value>
                <value>
                    <fullName>Has provider; never been seen</fullName>
                </value>
                <value>
                    <fullName>Has provider; limited contact</fullName>
                </value>
                <value>
                    <fullName>Has provider; use emergency room only</fullName>
                </value>
                <value>
                    <fullName>No provider; use emergency room only</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncidentR_Max__c</fullName>
        <label>IncidentR Max</label>
        <summarizedField>Activity__c.IncidentR_Number__c</summarizedField>
        <summaryForeignKey>Activity__c.BRI_Household__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Intake_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intake Number</label>
        <referenceTo>Intake__c</referenceTo>
        <relationshipLabel>Households</relationshipLabel>
        <relationshipName>Referral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <label>Referral Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Referral_source_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Households</relationshipLabel>
        <relationshipName>Households</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Households</relationshipLabel>
        <relationshipName>Households</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Field__c</fullName>
        <label>Test Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>BRI_Transfer_Family__c</columns>
        <columns>BRI_Referral_Date__c</columns>
        <columns>Site__c</columns>
        <columns>County__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Family</label>
    </listViews>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>BRI_Referral_Date__c</columns>
        <columns>Site__c</columns>
        <columns>County__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>BRI_FAW__c</columns>
        <columns>BRI_FSW__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>BRI_Type_Housing__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Households</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>County</fullName>
        <active>false</active>
        <label>County</label>
    </recordTypes>
    <recordTypes>
        <fullName>Family_CPCS</fullName>
        <active>true</active>
        <label>Family - CPCS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Family_HFI</fullName>
        <active>true</active>
        <label>Family - HFI</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household</fullName>
        <active>true</active>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household_CPCS</fullName>
        <active>false</active>
        <label>Household CPCS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household_HFI</fullName>
        <active>true</active>
        <label>Household - HFI</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provider</fullName>
        <active>false</active>
        <description>External Referal Providers</description>
        <label>Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>Site</fullName>
        <active>false</active>
        <description>HFI and CPCS SIte</description>
        <label>Site</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>